--- a/.gitmodules
+++ b/.gitmodules
@@ -25,7 +25,7 @@
 [submodule "sources/meta-qt5"]
 	path = sources/meta-qt5
 	url = https://github.com/meta-qt5/meta-qt5.git
-	branch = kirkstone
+	branch = master
 [submodule "sources/meta-freescale-ml"]
 	path = sources/meta-freescale-ml
 	url = https://github.com/Freescale/meta-freescale-ml.git
